--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
       - 80
     deploy:
       replicas: 6
+      placement:
+        constraints:
+          - node.role == manager
+        max_replicas_per_node: 1
       restart_policy:
         condition: on-failure
         delay: 5s
