--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
+#services:
+#  whoami:
+#    image: traefik/whoami:latest
+#    ports:
+#      - 80
+#    deploy:
+#      replicas: 6
+#      placement:
+#        constraints:
+#          - node.role == manager
+#        max_replicas_per_node: 2
+#      restart_policy:
+#        condition: on-failure
+#        delay: 5s
+#        max_attempts: 3
+#      update_config:
+#        parallelism: 1
+#        delay: 10s
+
 services:
   whoami:
-    image: traefik/whoami:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 80
     deploy:
